@@ -83,12 +83,20 @@ namespace KLFitter
      * @param p5 (the 2nd sigma).
      * @return False if problem with TF.
      */
-    inline static bool CheckDoubleGaussianSanity(double p2, double &p3, double p5) {
+    inline static bool CheckDoubleGaussianSanity(double &p2, double &p3, double &p5) {
       if (p3 < 0.) p3 = 0.;      
-      if (p2 < 0.) //std::cout << "KLFitter::ResDoubleGauss::CheckDoubleGaussianSanity() ERROR IN TRANSFERFUNCTIONS the sigma of the 1st Gaussian is < 0  -  FIT RESULT MAY NOT BE RELIABLE" << std::endl;
+      if (p2 < 0.) {
+	std::cout << "KLFitter::ResDoubleGauss::CheckDoubleGaussianSanity() ERROR IN TRANSFERFUNCTIONS the sigma of the 1st Gaussian is < 0  -  FIT RESULT MAY NOT BE RELIABLE" << std::endl;
+	std::cout << "--> Fitter is in a bad condition! Please check your input files (E out of validation scope?)." << std::endl;
+	p2 = 0.000001;
         return false;
-      if (p5 < 0.) //std::cout << "KLFitter::ResDoubleGauss::CheckDoubleGaussianSanity() ERROR IN TRANSFERFUNCTIONS the sigma of the 2nd Gaussian is < 0  -  FIT RESULT MAY NOT BE RELIABLE" << std::endl;
+	}
+      if (p5 < 0.) {
+	std::cout << "KLFitter::ResDoubleGauss::CheckDoubleGaussianSanity() ERROR IN TRANSFERFUNCTIONS the sigma of the 2nd Gaussian is < 0  -  FIT RESULT MAY NOT BE RELIABLE" << std::endl;
+	std::cout << "--> Fitter is in a bad condition! Please check your input files (E out of validation scope?)." << std::endl;
+	p5 = 0.000001;
         return false;
+	}
 
       return true;
     }
